Message.kielien properties muutoksia. StudentCoursesView ja StudentCoursesViewTest muutoksia